[package]
name = "procgen"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
num-traits = "0.2.14"
bincode = "1.3.3"
flate2 = "1.0"
enum-ordinalize = "3.1"
threadpool = "1.8"
env_logger = "0.9.0"
log = "0.4.17"
async-trait = "0.1.53"
bevy_ecs = "0.7.0"

[dependencies.tokio]
version = "1.17"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.nalgebra]
version = "0.30.1"
features = ["serde-serialize"]
