[package]
name = "plugin-natives"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.19.0"
flate2 = "1.0.24"
serde = {version = "1.0.137", features = ["derive"]}
nalgebra = {version = "0.31.0", features = ["serde-serialize"]}
bincode = "1.3.3"
procgen-common = {path = "../procgen-common"}

[dependencies.volume]
git = "https://github.com/PersonBelowRocks/volume.git"
rev = "4537747856839b760aa13e1c86b95b0508988f33"
features = ["nalgebra", "glam"]

[lib]
crate-type = ["cdylib"]