[package]
name = "plugin-natives"
version = "0.1.0"
edition = "2021"

[dependencies]
jni = "0.19.0"
flate2 = "1.0.24"
serde = {version = "1.0.137", features = ["derive"]}
nalgebra = {version = "0.31.0", features = ["serde-serialize"]}
bincode = "1.3.3"
procgen-common = {path = "../procgen-common"}
volume = {git = "https://github.com/PersonBelowRocks/volume.git", rev = "99ed396a86943e5107d87d2d1ed4c4b26dd99e73"}

[lib]
crate-type = ["cdylib"]