[package]
name = "procgen-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
nalgebra = {version = "0.31.0", features = ["serde-serialize"]}
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"
thiserror = "1.0.31"
downcast-rs = "1.2.0"

[dependencies.volume]
git = "https://github.com/PersonBelowRocks/volume.git"
rev = "4537747856839b760aa13e1c86b95b0508988f33"
features = ["nalgebra", "glam"]
