[package]
name = "procgen-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
hashbrown = "0.12.3"
nalgebra = {version = "0.31.0", features = ["serde-serialize"]}
serde = {version = "1.0", features = ["derive"]}
bincode = "1.3"
thiserror = "1.0.31"
downcast-rs = "1.2.0"
volume = {git = "https://github.com/PersonBelowRocks/volume.git", rev = "99ed396a86943e5107d87d2d1ed4c4b26dd99e73"}
