[package]
name = "procgen"
version = "0.1.0"
edition = "2021"
rust-version = "1.58"

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
num-traits = "0.2.15"
bincode = "1.3.3"
flate2 = "1.0"
env_logger = "0.9.0"
log = "0.4.17"
downcast-rs = "1.2"
rand = "0.8.5"
bracket-noise = "0.8.2"
procgen-common = {path = "../procgen-common"}
anymap = "0.12.1"
async-trait = "0.1.56"
volume = {git = "https://github.com/PersonBelowRocks/volume.git", rev = "99ed396a86943e5107d87d2d1ed4c4b26dd99e73"}
rayon = "1.5.3"

[dependencies.tokio]
version = "1.17"
features = ["full"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.nalgebra]
version = "0.31"
features = ["serde-serialize"]
